Fix docs stretching columns example

--- a/docs-src/less/docs-page.less
+++ b/docs-src/less/docs-page.less
@@ -286,6 +286,11 @@ section {
 	}
 }
 
+// stretching columns
+.demo-panel .stretch .panel {
+	height: 100%;
+}
+
 
 // for color demo
 .clabel {
